--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <ul>
     <li><a href="./apache/index.html">Apache 2.2.19 installation</a></li>
     <li><a href="./bugzilla/index.html">Bugzilla 4.0.1 installation</a></li>
+    <li><a href="./rvm/index.html">RVM tutorial</a></li>
   </ul>
   
 </body>
