Added Ferret and Anemone tutorial blocks

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href="./apache/index.html">Apache 2.2.19 installation</a></li>
     <li><a href="./bugzilla/index.html">Bugzilla 4.0.1 installation</a></li>
     <li><a href="./rvm/index.html">RVM tutorial</a></li>
+    <li><a href="./ferret/index.html">Ferret & Anemone tutorial</a></li>
   </ul>
   
 </body>
