Added DB and RAILS folders, some links and new edits

--- a/bugzilla/index.html
+++ b/bugzilla/index.html
@@ -7,9 +7,10 @@
 </head>
 
 <body>
+  <a href="../index.html">&lt;&nbsp;back</a>  
+  <br />
   <h2>Bugzilla 4.0.1 installation under Ubuntu 11.04</h2> 
   <br />
-  
   <p>
     Bugzilla installation have several dependencies and these are listed as follows:
     <ul>
@@ -107,6 +108,8 @@
     </pre>
     It installed Sendmail v.8.14.4-2ubuntu1.
   </p>
+  <br />
+  <a href="../index.html">&lt;&nbsp;back</a>
 </body>
 
 </html>
