--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <li><a href="./bugzilla/index.html">Bugzilla 4.0.1 installation</a></li>
     <li><a href="./rvm/index.html">RVM tutorial</a></li>
     <li><a href="./ferret/index.html">Ferret & Anemone tutorial</a></li>
+    <li><a href="./ajaxOnRails/index.html">Ajax on Rails</a></li>
+    <li><a href="./rails/index.html">Rails</a></li>
   </ul>
   
 </body>
