--- a/rvm/index.html
+++ b/rvm/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+  <a href="../index.html">&lt;&nbsp;back</a>
+  <br />
   <h2>RVM installation and usage</h2> 
   <br />
   
@@ -135,7 +137,8 @@
     <b>NOTE:</b><br/>
     When switched to the new (or existing) gemset, if you want to see all the gems, the gems from current gemset, as well as gems from global are going to be displayed.
   </p>
-  
+  <br />
+  <a href="../index.html">&lt;&nbsp;back</a>
 </body>
 
 </html>
