--- a/apache/index.html
+++ b/apache/index.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+  <a href="../index.html">&lt;&nbsp;back</a>  
+  <br />
   <h2>Installation is done on Ubuntu 11.04 version which runs as a virtual box</h2>
   <br/>
   <p>
@@ -60,6 +62,8 @@
     <pre>
       $ PREFIX/bin/apachectl -k stop
     </pre>
+    <br />
+    <a href="../index.html">&lt;&nbsp;back</a>  
 </body>
 
 </html>
