--- a/ferret/index.html
+++ b/ferret/index.html
@@ -14,9 +14,10 @@
 </head>
 
 <body>
+  <a href="../index.html">&lt;&nbsp;back</a>
+  <br />
   <h2>Using Ferret (Ruby native port od Lucene)</h2> 
   <br />
-  
   <p>
   Ferret is a Ruby native port of Lucene search indexer/searcher that shuold be easy to use.
   </p>
@@ -157,14 +158,15 @@
         highlights = index.highlight('content: "hot"',
           id,
           :field => :content,
-          :pre_tag => "<strong>",
-          :post_tag => "</strong>")
+          :pre_tag => "&lt;strong&gt;",
+          :post_tag => "&lt;/strong&gt;")
         
         puts highlights
       end
     </pre>
   </p>
-  
+  <br />
+  <a href="../index.html">&lt;&nbsp;back</a>
 </body>
 
 </html>
