Added rails part and reached chapter 5 of the Rails_Tutorial book, need to push further

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <li><a href="./rvm/index.html">RVM tutorial</a></li>
     <li><a href="./ferret/index.html">Ferret & Anemone tutorial</a></li>
     <li><a href="./ajaxOnRails/index.html">Ajax on Rails</a></li>
-    <li><a href="./rails/index.html">Rails</a></li>
+    <li><a href="./rails/index.html">Rails 3 guidelines</a></li>
   </ul>
   
 </body>
