--- a/rails/index.html
+++ b/rails/index.html
@@ -86,6 +86,11 @@
         <li>You can play in a <a href="db/index.html#activerecord">sandbox with DB models</a> to see how it all works</li>
         <li>It's a good idea to add <a href="model/index.html#validation">validation</a> at this point.</li>
         <li>After adding validations, it's good to create supporting <a href="rspec/index.html#modeltesting">tests that will test validation</a>.</li>
+        <li>For reason of adding encrypted passwords, you can create virtual attribute for raw passwords in a model and add validations for it.</li>
+        <li>You can add <a href="model/index.html#callbacks">callbacks</a> to a generated model to perform some actions before some other standard ActiveRecord actions takes place.</li>
+        <li>If needed, there is a way of performing <a href="helpers/index.html#tools">one-way hashing and adding salt to make encryption stronger</a>.</li>
+        <li>To improve testing you can use <a href="helpers/index.html#factorygirl">Factory Girl gem for making use of factories for testing<a/> instead of fixtures.</li>
+        <li>You can install <a href="helpers/index.html#gravatar">gravatar gem</a> which supports usage of avatars from gravatar service.</li>
     </ul>
   </p>
   <br />
